--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,19 @@
             <optional>true</optional>
         </dependency>
 
+        <!--webjars start-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>vue</artifactId>
+            <version>2.5.16</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>axios</artifactId>
+            <version>0.18.0</version>
+        </dependency>
+        <!--webjars end-->
+
 
     </dependencies>
 
